Enable Prometheus controller
