# charts/grafana-opscenter/values.openapiv3_schema.yaml
@@ -2347,6 +2347,16 @@ properties:
         additionalProperties:
           type: string
         type: object
+      platform:
+        properties:
+          baseURL:
+            type: string
+          token:
+            type: string
+        required:
+        - baseURL
+        - token
+        type: object
       podAnnotations:
         additionalProperties:
           type: string
@@ -2568,6 +2578,7 @@ properties:
     - image
     - imagePullPolicy
     - monitoring
+    - platform
     - registryFQDN
     - replicaCount
     - serviceAccount
